--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"wxhnssh's blog",
+    "subTitle":"记录一下个人",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/56063172?v=4",
     "GMEEK_VERSION":"last"
 }
