--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"wxhnssh's blog",
-    "subTitle":"记录一下个人",
+    "subTitle":"便纵有千种风情,更与何人说",
     "avatarUrl":"https://avatars.githubusercontent.com/u/56063172?v=4",
     "GMEEK_VERSION":"last"
 }
