--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"wxhnssh's blog",
     "subTitle":"便纵有千种风情,更与何人说",
-    "avatarUrl":"https://avatars.githubusercontent.com/u/56063172?v=4",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/56063172?u=67c4fcef51a6f9632b498c14a0124d401c0d2441&v=4",
     "GMEEK_VERSION":"last"
 }
